Changelog
=========

1.0a3 (unreleased)
------------------

- Emphasize marker interfaces in context view
  [glenfant]

- Provide same variables as in portal_actions in TAL tests
  [glenfant]

- completed i18n support and added it translation
  [giacomos]

1.0a2 (13/11/2011)
------------------

- Add interactive code debugging
  [optilude]

- Add TALES tester
  [optilude]

- Add details of context methods and attributes
  [optilude]

1.0a1 (13/11/2011)
------------------

- Initial release
  [optilude]